[package]
name = "injoint-client"
version = "0.0.1"
edition = "2021"
description = "injoint-client is client library for injoint"
repository = "https://github.com/PixelQuasar/injoint"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.66"
futures = "0.3.31"
tungstenite = "0.26.1"
futures-util = "0.3.31"
anyhow = "1.0.97"
