[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.66"
futures = "0.3.31"
tungstenite = "0.26.1"
futures-util = "0.3.31"
anyhow = "1.0.97"